syntax = "proto2";

package aasdk.proto.messages;

message ChannelOpenRequest
{
  required int32 priority = 1;
  required int32 channel_id = 2;
}

option optimize_for = SPEED;
